2005-09-28 Karsten Behrmann <BearPerson@sourcemage.org>
	* smgl.multi, skeleton/etc/sorcery/local/depends/linux.p.ppc:
	  add linux config for ppc
2005-09-26 Karsten Behrmann <BearPerson@sourcemage.org>
	* diskStructure: added menu for mount points (bug 9348)

2005-09-25 David Kowis <dkowis@sourcemage.org>
	* diskStructure: After much head bashing, the /dev/ removal needs to be
	applied globally to the output of a --checklist because we're getting more
	than one line of data. 

2005-09-25 David Kowis <dkowis@sourcemage.org>
	* diskStructure: Adding more debugging to RAID stuff to figure out why
	it's still broke.

2005-09-25 David Kowis <dkowis@sourcemage.org>
	* diskStructure: Fixed the RAID partition count

2005-09-25 Karsten Behrmann <BearPerson@sourcemage.org>
	* repository: merge back changes for parallelized installer
	* iso.mkfscommand.ppc: add -q to silence
	* caster: force cache generation on stale cache
	* bootloader: fix wrong dependency name for kernel/linux
	* config-2.6: add missing IDE/SCSI drivers

2005-09-24 Karsten Behrmann <BearPerson@sourcemage.org>
	* inittab, skeleton/usr/sbin/bg-install.sh: Added backgrounded spell
	  installing daemon
	* skeleton/var/state/sorcery/depends: add initial depends between
	  special spells
	* install.sh: add option to just load the environment
	* mkiso: switch conflicts file seperator char to ':'
	* 10common: add rudimentary locking functions
	* 30spellinstall: re-org for background capability
	* modules/{architecture,bootloader,kernel}:
	  add appropriate si_wait calls

2005-09-23 Karsten Behrmann <BearPerson@sourcemage.org>
	* templates/{lilo,grub}.conf: switch to new kernel naming scheme
	* modules/*: Add dependencies between steps (bug 8208)
	* initrd/sbin/smgl.init: look harder for CD - check /proc/partitions
	* mkinitrd: remove loop device when we're done with it
	* misc/release.sh, gen-scripts/config: centralize version
	* caster: check for $UPDATED

2005-09-22 Karsten Behrmann <BearPerson@sourcemage.org>